Página inicial em andamento

--- a/he.html
+++ b/he.html
@@ -44,7 +44,7 @@
       </form>
 
       <!-- Rodapé -->
-      <p class="footer-text">Sistema em Desenvolvimento por Lidia CruzS
+      <p class="footer-text">Sistema em Desenvolvimento por Lidia Cruz
       </p>
     </div>
   </div>
