Correção das areas

--- a/parteinicial/inicio.html
+++ b/parteinicial/inicio.html
@@ -9,7 +9,6 @@
 </head>
 <body>
   <header class="topbar">
-    <img src="/sistemaneo/parteinicial/img/minhalogo.png" alt="Logo Provisória" class="logo" />
     <nav class="nav">
       <a href="#">Início</a>
       <a href="#">Projetos</a>
@@ -37,15 +36,15 @@
       <h3>PREENCHA AS INFORMAÇÕES ABAIXO</h3>
       <form id="colabForm">
         <div class="field-grid">
-          <label>Nome<input type="text" name="engenharia" required /></label>
-          <label>Matrícula<input type="text" name="engenharia" required /></label>
-          <label>Mes<input type="text" name="financeiro" required /></label>
-          <label>Data<input type="text" name="rh" required /></label>
-          <label>Número de Horas<input type="text" name="ti" required /></label>
-          <label>Autorização<input type="text" name="seguranca" required /></label>
-          <label>Justificativas<input type="text" name="comunicacao" required /></label>
-          <label>Macroprocesso(motivo)<input type="text" name="operacoes" required /></label>
-          <label>Área<input type="text" name="operacoes" required /></label>
+          <label>Nome<input type="text" name="nome" required /></label>
+          <label>Matrícula<input type="text" name="matricula" required /></label>
+          <label>Mês<input type="text" name="mes" required /></label>
+          <label>Data<input type="text" name="data" required /></label>
+          <label>Número de Horas<input type="text" name="horas" required /></label>
+          <label>Autorização<input type="text" name="autorizacao" required /></label>
+          <label>Justificativas<input type="text" name="justificativas" required /></label>
+          <label>Macroprocesso(motivo)<input type="text" name="macroprocesso" required /></label>
+          <label>Área<input type="text" name="area" required /></label>
         </div>
         <button type="submit" class="enviar-btn">Enviar</button>
       </form>
@@ -59,7 +58,7 @@
             <tr>
               <th>Nome</th>
               <th>Matrícula</th>
-              <th>Mes</th>
+              <th>Mês</th>
               <th>Data</th>
               <th>Número de Horas</th>
               <th>Autorização</th>
@@ -75,3 +74,4 @@
   </main>
 </body>
 </html>
+ 
