--- a/parteinicial/inicio.html
+++ b/parteinicial/inicio.html
@@ -22,6 +22,7 @@
   
     <main class="container">
       <section class="welcome">
+        <img src="/sistemaneo/parteinicial/img/logoneoenergia.png" alt="">
         <h1>Bem-vindo(a)!</h1>
         <p>Aqui você pode acompanhar suas horas extras e o controle de horários</p>
       </section>
